<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_neighbour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8C8C8">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


            <ImageView
                android:id="@+id/Avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_avatar"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C8C8C8"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/cardview_light_background"
                        android:orientation="vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"

                        tools:ignore="PrivateResource">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginTop="70dp"
                            android:layout_marginEnd="16dp"
                            android:background="@null"
                            android:contentDescription="@string/icon_address"
                            app:srcCompat="@drawable/ic_location__24dp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginTop="110dp"
                            android:layout_marginEnd="16dp"
                            android:background="@null"
                            android:contentDescription="@string/icon_phone"
                            app:srcCompat="@drawable/ic_phone_black_24dp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginTop="150dp"
                            android:layout_marginEnd="16dp"
                            android:background="@null"
                            app:srcCompat="@drawable/ic_email_24dp" />

                        <TextView
                            android:id="@+id/Name"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginTop="20dp"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/Adresse"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="70dp"
                            android:gravity="center_vertical"
                            android:text="    8 rue des champs" />

                        <TextView
                            android:id="@+id/Phone"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="110dp"
                            android:gravity="center_vertical"
                            android:text="    +33 6 06 06 06 06" />

                        <TextView
                            android:id="@+id/Mail"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="150dp"
                            android:gravity="center_vertical" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:background="@color/cardview_light_background"

                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"

                        tools:ignore="PrivateResource">


                        <TextView
                            android:id="@+id/DescriptionTitle"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:text="@string/DescriptionTitle"
                            android:textSize="25sp"
                            android:textStyle="bold"

                            />

                        <TextView
                            android:id="@+id/Description"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="70dp"
                            android:layout_marginBottom="70dp"
                            android:text="@string/Description"

                            />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/Favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#FFFF"
        app:fabCustomSize="60dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="end|bottom" />
</android.support.design.widget.CoordinatorLayout>